--- a/styles/image_viewer.css
+++ b/styles/image_viewer.css
@@ -1,3 +1,107 @@
-img {
-  border: 10px solid black;
+:root {
+  --green: #caf8da;
+  --red: #ffa489;
+  --black: #221220;
+  --yellow: #ff66;
+  --blue: #191970;
+  --white: #fff8f3;
+}
+
+body {
+  font-family: 'Inconsolata', monospace;
+}
+
+.container {
+  display: grid;
+  margin: auto;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows:
+    75px repeat(2, minmax(350px, auto))
+    minmax(300px, auto) 600px;
+}
+
+.header-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.main1 h1 {
+  font-size: 4em;
+  font-weight: 600;
+}
+
+.main1 p {
+  font-size: 1.3em;
+  font-weight: 200;
+}
+
+.main2 img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.middle1 {
+  grid-column: 1 / 3;
+  justify-self: center;
+  text-align: center;
+  font-family: 'Dosis', sans-serif;
+}
+
+.buttons {
+  margin-top: 25px;
+  width: 200px;
+  height: 40px;
+  border-radius: 25px;
+  border-color: var(--yellow);
+  font-size: 1.5em;
+}
+
+.middle1 img {
+  max-height: 150px;
+}
+
+.articles {
+  font-family: 'Pangolin', cursive;
+  padding: 20px;
+}
+
+.titles {
+  font-size: 34px;
+}
+
+.contents {
+  font-size: 18px;
+}
+
+.dates {
+  font-size: 12px;
+}
+
+.sidebar1 {
+  margin-left: 2em;
+}
+
+.sidebar2 img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.ending {
+  grid-column: 1 / 3;
+  padding: 35px;
+  margin: auto;
+  text-align: justify;
+}
+
+.ending input[type='email'] {
+  width: 250px;
+  height: 2em;
+  border: 3px solid var(--red);
+}
+
+.ending textarea {
+  width: 450px;
+  height: 250px;
+  border: 5px solid var(--yellow);
 }
