--- a/styles/image_viewer.css
+++ b/styles/image_viewer.css
@@ -21,7 +21,15 @@ body {
     minmax(300px, auto) 600px;
 }
 
-.header-2 {
+.about-me {
+  grid-column: 1 / 2;
+  grid-row: 1;
+  margin: auto;
+}
+
+.navbar {
+  grid-column: 2 / 3;
+  grid-row: 1;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
@@ -48,11 +56,11 @@ body {
   font-family: 'Dosis', sans-serif;
 }
 
-.buttons {
+button {
   margin-top: 25px;
   width: 200px;
   height: 40px;
-  border-radius: 25px;
+  border-radius: 5px;
   border-color: var(--yellow);
   font-size: 1.5em;
 }
