--- a/styles/image_viewer.css
+++ b/styles/image_viewer.css
@@ -15,11 +15,10 @@ body {
   display: grid;
   margin: auto;
   grid-gap: 10px;
-  justify-items: center;
   grid-template-columns: minmax(400px, auto) minmax(400px, auto);
   grid-template-rows:
-    75px repeat(2, minmax(350px, auto))
-    minmax(300px, auto) 600px;
+    85px minmax(350px, auto)
+    auto;
 }
 
 .about-me {
