--- a/styles/image_viewer.css
+++ b/styles/image_viewer.css
@@ -21,12 +21,6 @@ body {
     auto;
 }
 
-.about-me {
-  grid-column: 1 / 2;
-  grid-row: 1;
-  margin: auto;
-}
-
 .navbar {
   grid-column: 2 / 3;
   grid-row: 1;
@@ -57,12 +51,14 @@ body {
 }
 
 button {
-  margin-top: 25px;
-  width: 200px;
-  height: 40px;
-  border-radius: 5px;
-  border-color: var(--yellow);
+  margin: 10px 5px;
+  height: 30px;
+  border-radius: 10px;
   font-size: 1.5em;
+  font-family: 'Dosis', sans-serif;
+  border-color: var(--black);
+  background-color: var(--black);
+  color: var(--white);
 }
 
 .middle1 img {
