--- a/client_side/src/App.scss
+++ b/client_side/src/App.scss
@@ -5,3 +5,6 @@
 @import 'sass/base/base';
 @import 'sass/base/typography';
 @import 'sass/base/utilities';
+
+@import 'sass/components/header';
+@import 'sass/components/sidebar';
