contact me section update

--- a/client_side/src/sass/abstracts/_variables.scss
+++ b/client_side/src/sass/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 $color-primary-light: #c69963;
 $color-primary-dark: #b28451;
 
-$color-secondary-light: #ffb900;
+$color-secondary-light: #f8a5c2;
 $color-secondary-dark: #ff7730;
 
 $color-tertiary-light: #2998ff;
