--- a/client_side/src/App.scss
+++ b/client_side/src/App.scss
@@ -6,6 +6,8 @@
 @import 'sass/base/typography';
 @import 'sass/base/utilities';
 
-@import 'sass/components/header';
 @import 'sass/components/sidebar';
+@import 'sass/components/header';
 @import 'sass/components/introPhoto';
+@import 'sass/components/aboutMe';
+@import 'sass/components/slider';
