--- a/client_side/src/sass/base/_base.scss
+++ b/client_side/src/sass/base/_base.scss
@@ -20,9 +20,9 @@ body {
 
 .App {
 	display: grid;
-	grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+	grid-template-rows: 100vh 40vh 40vw repeat(3, min-content);
 	grid-template-columns:
-		[sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr)
+		[sidebar-start] 10rem [sidebar-end full-start] minmax(6rem, 1fr)
 		[center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
 		[center-end] minmax(6rem, 1fr)
 		[full-end];
