--- a/client_side/src/sass/components/_introPhoto.scss
+++ b/client_side/src/sass/components/_introPhoto.scss
@@ -1,29 +1,16 @@
 .profile {
-	background-image: linear-gradient(
-		to bottom,
-		rgba($color-secondary-light, 0.9),
-		rgba($color-tertiary-dark, 1)
-	);
-	grid-column: col-start 7 / -1;
+	grid-column: full-start / col-end 3;
 
 	display: grid;
-	grid-template-rows: 75% 1fr;
 	justify-items: center;
 	align-items: center;
-	grid-gap: 2rem;
 	opacity: 100;
 
 	&__img {
 		padding: 2rem;
-		width: 65%;
+		width: 50%;
 		border-radius: 50%;
 		object-fit: cover;
 		display: block;
-	}
-
-	&__name {
-		color: $color-white;
-		font-weight: 900;
-		font-size: 8rem;
 	}
 }
