--- a/client_side/src/sass/components/_sidebar.scss
+++ b/client_side/src/sass/components/_sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar {
-	background-color: $color-primary-light;
+	background-color: $color-primary-dark;
 	grid-column: sidebar-start / sidebar-end;
 	grid-row: 1 / -1;
 
