--- a/client_side/src/sass/base/_typography.scss
+++ b/client_side/src/sass/base/_typography.scss
@@ -1,44 +1,31 @@
 %heading {
-	font-family: $font-display;
-	font-weight: 400;
-	text-transform: uppercase;
-	color: $color-black;
+	font-family: var(--font-display);
+	color: var(--color-black);
 	line-height: 1;
 }
 
 .heading-1 {
 	@extend %heading;
-	font-size: 5.5rem;
+	text-transform: uppercase;
+	font-size: 8rem;
+	font-weight: 900;
 }
 
 .heading-2 {
 	@extend %heading;
+	text-transform: uppercase;
 	font-size: 4rem;
+	font-weight: 600;
 }
 
 .heading-3 {
 	@extend %heading;
-	font-size: 1.9rem;
+	font-size: 2.5rem;
+	font-weight: 500;
 }
 
 .heading-4 {
 	@extend %heading;
-	font-size: 1.6rem;
-}
-
-.btn {
-	background-color: $color-primary-light;
-	color: $color-white;
-	border: none;
-	border-radius: 0;
-	font-family: $font-display;
 	font-size: 1.5rem;
-	text-transform: uppercase;
-	padding: 1.8rem 3rem;
-	cursor: pointer;
-	transition: all 0.2s;
-
-	&:hover {
-		background-color: $color-primary-dark;
-	}
+	font-weight: 400;
 }
