--- a/client_side/src/sass/components/_sidebar.scss
+++ b/client_side/src/sass/components/_sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar {
-	background-color: $color-primary-dark;
+	background-color: var(--color-black);
 	grid-column: sidebar-start / sidebar-end;
 	grid-row: 1 / -1;
 
@@ -11,7 +11,7 @@
 	border: none;
 	border-radius: 0;
 
-	background-color: $color-white;
+	background-color: var(--color-white);
 	height: 2px;
 	width: 4.5rem;
 	margin-top: 4rem;
@@ -19,7 +19,7 @@
 
 	&::before,
 	&::after {
-		background-color: $color-white;
+		background-color: var(--color-white);
 		height: 2px;
 		width: 4.5rem;
 		content: '';
