profile_section has been added

--- a/client_side/src/App.scss
+++ b/client_side/src/App.scss
@@ -6,4 +6,4 @@
 
 @import 'sass/components/header';
 @import 'sass/components/sidebar';
-@import 'sass/components/profile';
+@import 'sass/components/aboutMe';
