--- a/client_side/src/sass/components/_header.scss
+++ b/client_side/src/sass/components/_header.scss
@@ -4,10 +4,10 @@
 	background-size: cover;
 	background-position: center;
 	padding: 7rem;
-	padding-top: 10rem;
+	text-align: center;
 
 	display: grid;
-	grid-template-rows: 80% 1fr 1fr;
+	grid-template-rows: min-content 1fr;
 	grid-template-columns: 1fr;
 
 	span {
@@ -15,8 +15,23 @@
 	}
 
 	&__title {
+		display: inline-block;
+		background-image: linear-gradient(
+			to right,
+			rgba(#eb2f64, 0.3),
+			rgba(#eb2f64, 0.9)
+		);
+		letter-space: 0.2rem;
+		-webkit-background-clip: text;
+		background-clip: text;
+		color: transparent;
+		transition: all 0.2s;
+	}
+
+	&__intro {
 		display: flex;
 		justify-content: center;
+		padding: 3rem;
 
 		&--name {
 			margin: 0 3rem;
@@ -29,7 +44,7 @@
 	}
 
 	@media only screen and (max-width: $bp-largest) {
-		&__title {
+		&__intro {
 			&--name {
 				font-size: 6.3rem;
 			}
@@ -40,7 +55,7 @@
 	}
 
 	@media only screen and (max-width: $bp-larger) {
-		&__title {
+		&__intro {
 			&--name {
 				font-size: 5rem;
 			}
@@ -51,7 +66,7 @@
 	}
 
 	@media only screen and (max-width: $bp-large) {
-		&__title {
+		&__intro {
 			&--name {
 				font-size: 4rem;
 			}
@@ -63,7 +78,7 @@
 	}
 
 	@media only screen and (max-width: $bp-medium) {
-		&__title {
+		&__intro {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
@@ -79,7 +94,7 @@
 	}
 
 	@media only screen and (max-width: $bp-small) {
-		&__title {
+		&__intro {
 			&--name {
 				font-size: 4.5rem;
 			}
@@ -91,7 +106,7 @@
 	}
 
 	@media only screen and (max-width: $bp-smaller) {
-		&__title {
+		&__intro {
 			&--name {
 				font-size: 8rem;
 			}
@@ -103,6 +118,7 @@
 
 	&__contact {
 		padding: 3rem;
+		align-self: end;
 		transition: all 0.2s;
 
 		&--text {
@@ -142,8 +158,10 @@
 			padding-top: 1.5rem;
 		}
 		&--logo {
-			width: 8rem;
-			height: 8rem;
+			width: 7rem;
+			height: 7rem;
+			cursor: url(http://www.javascriptkit.com/dhtmltutors/cursor-hand.gif),
+				auto;
 		}
 		@media only screen and (max-width: $bp-largest) {
 			&--logo {
