Refacoring the landing page

--- a/client_side/src/App.scss
+++ b/client_side/src/App.scss
@@ -5,5 +5,5 @@
 @import 'sass/base/typography';
 
 @import 'sass/components/header';
-@import 'sass/components/sidebar';
-@import 'sass/components/aboutMe';
+@import 'sass/components/intro';
+@import 'sass/components/gallery';
