--- a/client_side/src/sass/base/_typography.scss
+++ b/client_side/src/sass/base/_typography.scss
@@ -1,31 +1,29 @@
 %heading {
-	font-family: var(--font-display);
-	color: var(--color-black);
+	font-family: var(--font-primary);
+	color: var(--color-primary);
 	line-height: 1;
 }
 
 .heading-1 {
 	@extend %heading;
-	text-transform: uppercase;
 	font-size: 8rem;
-	font-weight: 900;
+	font-weight: 800;
 }
 
 .heading-2 {
 	@extend %heading;
-	text-transform: uppercase;
-	font-size: 5.5rem;
+	font-size: 6rem;
 	font-weight: 600;
 }
 
 .heading-3 {
 	@extend %heading;
-	font-size: 2.5rem;
-	font-weight: 500;
+	font-size: 4rem;
+	font-weight: 400;
 }
 
 .heading-4 {
 	@extend %heading;
-	font-size: 1.5rem;
+	font-size: 2rem;
 	font-weight: 400;
 }
