--- a/client_side/src/sass/base/_base.scss
+++ b/client_side/src/sass/base/_base.scss
@@ -15,6 +15,7 @@ html {
 }
 
 body {
+	background-color: #ffffff;
 	font-family: var(--font-primary);
 	color: var(--color-primary);
 	font-weight: 300;
@@ -23,17 +24,17 @@ body {
 
 ::-moz-selection {
 	background: var(--color-secondary);
-	color: white;
+	color: #ffffff;
 }
 
 ::selection {
 	background: var(--color-secondary);
-	color: white;
+	color: #ffffff;
 }
 
 .App {
 	display: grid;
-	grid-template-rows: repeat(3, min-content) 80vh 40vw;
+	grid-template-rows: repeat(4, min-content) 80vh 40vw;
 	grid-template-columns:
 		[full-start] minmax(6rem, 1fr)
 		[center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
