--- a/client_side/src/sass/components/_intro.scss
+++ b/client_side/src/sass/components/_intro.scss
@@ -1,5 +1,5 @@
 .intro {
-	grid-column: center-start / center-end;
+	grid-column: full-start / full-end;
 	margin: 6rem auto 0 auto;
 	padding: 2rem;
 	backface-visibility: hidden;
