--- a/client_side/src/sass/abstracts/_variables.scss
+++ b/client_side/src/sass/abstracts/_variables.scss
@@ -2,9 +2,10 @@
 	--color-primary: #3b3a3a;
 	--color-secondary: #63d488;
 	--color-tertiary: #ff3366;
+	--color-white: #ffffff;
 
-	--font-primary: 'Josefin Sans', sans-serif;
-	--font-display: 'Nunito', sans-serif;
+	--font-primary: 'Nunito', sans-serif;
+	--font-display: 'Josefin Sans', sans-serif;
 }
 
 // RESPONSIVE BREAKPOINTS
