--- a/client_side/src/sass/base/_base.scss
+++ b/client_side/src/sass/base/_base.scss
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-	background-color: #ffffff;
+	background-color: var(--color-white);
 	font-family: var(--font-primary);
 	color: var(--color-primary);
 	font-weight: 300;
@@ -24,20 +24,29 @@ body {
 
 ::-moz-selection {
 	background: var(--color-secondary);
-	color: #ffffff;
+	color: var(--color-primary);
 }
 
 ::selection {
 	background: var(--color-secondary);
-	color: #ffffff;
+	color: var(--color-primary);
 }
 
 .App {
 	display: grid;
-	grid-template-rows: repeat(4, min-content) 80vh 40vw;
+	grid-template-rows: repeat(4, min-content) 80vh 40vh;
 	grid-template-columns:
 		[full-start] minmax(6rem, 1fr)
 		[center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
 		[center-end] minmax(6rem, 1fr)
 		[full-end];
+}
+
+.start-line {
+	background-color: var(--color-secondary);
+	height: 2px;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
