--- a/client_side/src/App.scss
+++ b/client_side/src/App.scss
@@ -1,12 +1,14 @@
-@import 'sass/abstracts/variables';
+@import "sass/abstracts/variables";
 
-@import 'sass/base/animations';
-@import 'sass/base/base';
-@import 'sass/base/typography';
+@import "sass/base/animations";
+@import "sass/base/base";
+@import "sass/base/typography";
 
-@import 'sass/components/header/header';
-@import 'sass/components/header/intro';
-@import 'sass/components/header/gallery';
+@import "sass/components/header/header";
+@import "sass/components/header/title";
+@import "sass/components/header/gallery";
 
-@import 'sass/components/main/about';
-@import 'sass/components/main/skills';
+@import "sass/components/main/introduction";
+@import "sass/components/main/tech-skills";
+@import "sass/components/main/skill";
+@import "sass/components/main/blank";
