--- a/client_side/src/sass/base/_animations.scss
+++ b/client_side/src/sass/base/_animations.scss
@@ -32,12 +32,10 @@
 
 @keyframes moveInBottom {
 	0% {
-		opacity: 0;
-		transform: translateY(3rem);
+		transform: translateY(100%);
 	}
 
 	100% {
-		opacity: 1;
-		transform: translate(0);
+		transform: translateY(0);
 	}
 }
