--- a/client_side/src/sass/components/header/_gallery.scss
+++ b/client_side/src/sass/components/header/_gallery.scss
@@ -1,103 +1,103 @@
 .frame {
-	grid-column: full-start / full-end;
+  grid-column: full-start / full-end;
 
-	display: flex;
-	justify-content: center;
-	margin-top: 7rem;
+  display: flex;
+  justify-content: center;
+  margin-top: 8rem;
 }
 
 .gallery {
-	perspective: 150rem;
-	-moz-perspective: 150rem;
-	position: relative;
-	display: flex;
-	height: 40rem;
-	width: 70rem;
-	outline: none;
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  display: flex;
+  height: 40rem;
+  width: 70rem;
+  outline: none;
 
-	&__item {
-		height: 40rem;
-		width: 70rem;
-		transition: all 1s ease;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		-webkit-backface-visibility: hidden;
-		backface-visibility: hidden;
-		border-radius: 3px;
-		overflow: hidden;
-		border-radius: 15px;
+  &__item {
+    height: 40rem;
+    width: 70rem;
+    transition: all 1s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border-radius: 3px;
+    overflow: hidden;
+    border-radius: 15px;
 
-		&--front {
-			background-color: #ffffff;
-		}
+    &--front {
+      background-color: #ffffff;
+    }
 
-		&--back {
-			transform: rotateY(180deg);
-			display: grid;
-			grid-template-columns: 1fr 1fr;
-		}
-	}
+    &--back {
+      transform: rotateY(180deg);
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+  }
 
-	&:hover &__item--front {
-		transform: rotateY(-180deg);
-	}
+  &:hover &__item--front {
+    transform: rotateY(-180deg);
+  }
 
-	&:hover &__item--back {
-		transform: rotateY(0);
-	}
+  &:hover &__item--back {
+    transform: rotateY(0);
+  }
 
-	&__img--front {
-		display: inline-block;
-		position: relative;
-		width: 100%;
-		filter: contrast(160%);
-	}
+  &__img--front {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    filter: contrast(160%);
+  }
 
-	&__img--back {
-		display: inline-block;
-		position: relative;
-		object-fit: cover;
-		width: 100%;
-		border-radius: 15px;
-		filter: contrast(140%) brightness(145%);
-	}
+  &__img--back {
+    display: inline-block;
+    position: relative;
+    object-fit: cover;
+    width: 100%;
+    border-radius: 15px;
+    filter: contrast(140%) brightness(145%);
+  }
 
-	&__text--back {
-		font-family: var(--font-display);
-		position: relative;
-		display: flex;
-		flex-direction: column;
-		margin-left: 2rem;
-		font-size: 1.5rem;
-		line-height: 1.15;
-		font-weight: 400;
-	}
+  &__text--back {
+    font-family: var(--font-display);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-left: 2rem;
+    font-size: 1.5rem;
+    line-height: 1.15;
+    font-weight: 400;
+  }
 
-	&__text--quote:not(:last-child) {
-		margin: 3.5rem 0 8.5rem 0;
-	}
+  &__text--quote:not(:last-child) {
+    margin: 3.5rem 0 8.5rem 0;
+  }
 
-	&__text--quote::before {
-		content: '\201C';
-		margin-left: -1rem;
-		line-height: 1;
-		font-size: 10rem;
-		color: var(--color-secondary);
-		font-family: sans-serif;
-	}
+  &__text--quote::before {
+    content: "\201C";
+    margin-left: -1rem;
+    line-height: 1;
+    font-size: 10rem;
+    color: var(--color-secondary);
+    font-family: sans-serif;
+  }
 
-	&__text--quote::after {
-		position: absolute;
-		content: '';
-		width: 100%;
-		height: 2px;
-		background-color: var(--color-secondary);
-	}
+  &__text--quote::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: var(--color-secondary);
+  }
 }
 
 .quote:not(last-child) {
-	margin-top: -5.5rem;
-	margin-bottom: 0.5rem;
+  margin-top: -5.5rem;
+  margin-bottom: 0.5rem;
 }
